# universal-knowledge-engine

./: .dockerignore  .gitignore  docker-compose.yml  launch_savage.bat  main.py  package-lock.json  pyproject.toml
apps/api-server/: Dockerfile  autonomous_agent.py  main.py  pyproject.toml  savage_vision.py
apps/web-ui/: package-lock.json  package.json  tailwind.config.ts
apps/web-ui/.next/: trace
apps/web-ui/.next/cache/webpack/client-development/: index.pack.gz.old
apps/web-ui/.next/cache/webpack/server-development/: index.pack.gz.old
apps/web-ui/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/web-ui/.next/server/app/: page.js  page_client-reference-manifest.js
apps/web-ui/.next/server/vendor-chunks/: @swc.js  next.js
apps/web-ui/.next/static/chunks/: app-pages-internals.js  webpack.js
apps/web-ui/.next/static/chunks/app/: layout.js  page.js
apps/web-ui/.next/static/css/app/: layout.css
apps/web-ui/.next/static/webpack/: webpack.279a124fb88db0b0.hot-update.js  webpack.5bf63369c4306d61.hot-update.js  webpack.d9c5387fd42f10ea.hot-update.js
apps/web-ui/.next/static/webpack/app/: layout.279a124fb88db0b0.hot-update.js  layout.5bf63369c4306d61.hot-update.js  layout.d9c5387fd42f10ea.hot-update.js
apps/web-ui/.next/types/app/: layout.ts  page.ts
apps/web-ui/app/: globals.css  layout.tsx  page.tsx
apps/web-ui/src/app/: globals.css  layout.tsx  page.tsx
apps/web-ui/src/components/: SentinelFeed.tsx
services/ingestion-worker/: ingest_to_db.py  main.py  pyproject.toml
