[project]
name = "universal-knowledge-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "google-generativeai",
    "ai-core",
    "python-dotenv>=1.2.1",
    "google-genai>=1.62.0",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.12.5",
    "ultralytics>=8.4.14",
    "pyserial>=3.5",
]

[tool.uv.workspace]
# Matches your exact folder structure
members = ["packages/ai-core", "apps/api-server"]
exclude = ["apps/web-ui"]

[tool.uv.sources]
ai-core = { workspace = true }
